fix can't find router
